test/Translate/Control/inner_inst.p4.ref
error: loc("test/Translate/Control/inner_inst.p4":16:20): Unsupported operation 'p4hir.instantiate' in exportExpression
note: loc("test/Translate/Control/inner_inst.p4":16:20): see current operation: %3 = "p4hir.instantiate"(%2) <{callee = @InnerPipe, name = "inner1"}> : (!p4hir.bool) -> !p4hir.control<"InnerPipe", (!p4hir.bit<10>, !p4hir.int<16>, !p4hir.ref<!p4hir.int<16>>)>
  14 |     InnerPipe(false) inner2;
  15 |     // CHECK: %[[inner1:.*]] = p4hir.instantiate @InnerPipe(%true) as "inner1" : (!p4hir.bool) -> !InnerPipe
  16 |     // CHECK: %[[inner2:.*]] = p4hir.instantiate @InnerPipe(%false) as "inner2" : (!p4hir.bool) -> !InnerPipe
     |                    ^
  17 |     
  18 |     action bar() {
